--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,10 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <div><%= f.label :avatar,"Image" %><br />
+  <%= image_tag current_user.avatar %><br />
+  <%= f.file_field :avatar %>
+
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
 
