--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -61,7 +61,8 @@
           
                   <div class="thumbnail">
                           <%= link_to( image_tag(asset.object.image.url(:thumb)), asset.object.image.url(:original) ) %>
-                          <%= asset.check_box :_delete %>
+                          <%= asset.check_box  :_destroy %>
+
                   </div>
                   
             <% end %>        
