removed stuf from the form, added dependencies between user and ad

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,6 +5,7 @@
 	<p><%= link_to "Terminar a sessão",destroy_user_session_path, method: :delete %></p>
 	<p><%= link_to "Editar perfil",edit_user_registration_path %></p>
 	<p><%= link_to "Ver utilizadores",users_path %></p>
+	<p><%= link_to "Adicionar anúncio",ads_path %></p>
 	<% else %>
 	<p> <%= link_to "Login",new_user_session_path %></p>
 	<p> <%= link_to "Criar uma conta",new_user_registration_path %></p>
