--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<!--
 	<p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-<%= yield %>
+	-->
+
+    <%= render 'layouts/header' %>
+    <%= yield %>
+	<%= render 'layouts/footer' %>
+	
 
 </body>
 </html>
