--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @message, :url => {controller: "messages",action: "create"} do |m| %>
+<%= form_for @message, :url => ad_new_messages_path(@ad.id) do |m| %>
 
   <div class="field">
     <%= m.label :text %><br>
