--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,11 @@
   <title>Agrosocial</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+
+  <!--Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
+
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -13,8 +18,31 @@
 	-->
 
     <%= render 'layouts/header' %>
-    <%= yield %>
-	<%= render 'layouts/footer' %>
+
+    <!-- Content row -->
+    <div class="row" id="container" >
+        <!-- SIDEBAR Open -->
+        <div id="sidebar-left" class="col-2 col-lg-2">
+            <ul>
+              <li><%= link_to "<i class='fa fa-anchor'></i>ADS".html_safe  ,  ads_path %></li>
+              <li><%= link_to "<i class='icon-plus'></i>New Ad".html_safe  ,  new_ad_path %></li>
+              <li><%= link_to "<i class='icon-user'></i>Users".html_safe  ,  users_path %></li>
+              <li>
+                <%= link_to "<i class='icon-user'></i>Login".html_safe  ,  new_user_session_path %>
+              </li>
+              <li>Teste</li>
+            </ul>
+       </div>
+   <!-- right content box -->
+     <div id="content" class="col-lg-10 container" >
+      <%= yield %>
+
+    </div>
+   </div>
+
+
+    
+	  <%= render 'layouts/footer' %>
 	
 
 </body>
