--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,13 @@
       <span class="icon-bar"></span>
     </button>
     <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
-    <a class="navbar-brand" href="#">AgroSocial</a>
+    <a class="navbar-brand" href="/">AgroSocial</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
 
-    <div class="input-append">
+   <!--  <div class="input-append">
     <input class="span2" id="appendedDropdownButton" type="text">
     <div class="btn-group">
     <button class="btn dropdown-toggle" data-toggle="dropdown">
@@ -26,7 +26,7 @@
     </ul>
     </div>
     </div>
-
+ -->
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search">
