--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,34 +1,44 @@
-<%= form_for @message, :url => ad_new_messages_path(@ad.id),:html => {:id => "comment_ad",:ajax_path => ad_new_messages_path(@ad.id) },:remote => true do |m| %>
+<div class="container">
+    <div class="row">
+    <div class="col-sm-4 col-md-4">
+            <div class="panel panel-default">
+                <div class="panel-body">                
+                    <%= form_for @message, :url => ad_new_messages_path(@ad.id),:html => {:id => "comment_ad",:ajax_path => ad_new_messages_path(@ad.id) },:remote => true do |m| %>
   
-  <% if @message.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@message.errors.count, "error") %> prohibited this ad from being saved:</h2>
+                          <% if @message.errors.any? %>
+                            <div id="error_explanation">
+                              <h2><%= pluralize(@message.errors.count, "error") %> prohibited this ad from being saved:</h2>
 
-      <ul>
-      <% @message.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-  <% end %>
+                              <ul>
+                              <% @message.errors.full_messages.each do |msg| %>
+                                <li><%= msg %></li>
+                              <% end %>
+                          <% end %>
 
-  <div class="field">
-    <%= m.label :text %><br>
-    <%= m.text_field :text,:id => "text_comment" %>
-  </div>
-  <div class="field">
-    <%= m.label :sender_id %><br>
-    <%= m.text_field :sender_id, :value => current_user.id %>
-  </div>
-  <div class="field">
-    <%= m.label :receiver_id %><br>
-    <%= m.text_field :receiver_id, :value => @ad.user_id %>
-  </div>
-  <div class="field">
-    <%= m.label :ad_id %><br>
-    <%= m.text_field :ad_id,:value => @ad.id %>
-  </div>
-  <div class="actions">
-    <%= m.submit %>
-  </div>
+                          <div class="field">
+                            <%= m.label :text %><br>
+                            <%= m.text_area :text,:id => "text_comment",:rows=>5,:class=> "form-control counted" ,:placeholder => "Type in your message"%>
+                            <h6 class="pull-right" id="counter">144 characters remaining</h6>
+                          </div>
+                          <div class="field">
+                            <%= m.label :sender_id %><br>
+                            <%= m.text_field :sender_id, :value => current_user.id %>
+                          </div>
+                          <div class="field">
+                            <%= m.label :receiver_id %><br>
+                            <%= m.text_field :receiver_id, :value => @ad.user_id %>
+                          </div>
+                          <div class="field">
+                            <%= m.label :ad_id %><br>
+                            <%= m.text_field :ad_id,:value => @ad.id %>
+                          </div>
+                        
+                        <button class="btn btn-info" type="submit">Post New Message</button>
 
 
-<% end %>
+                        <% end %>
+                </div>
+            </div>
+        </div>
+  </div>
+</div>
