[Update Feature] Cities to USERS - DEBUG Users - Messages

--- a/app/views/ads/index.html.erb
+++ b/app/views/ads/index.html.erb
@@ -11,6 +11,7 @@
       <th>Is active</th>
       <th>Type price</th>
       <th>City</th>
+      <th>User_ID / User_Name</th>
       <th></th>
       <th></th>
       <th></th>
@@ -28,6 +29,7 @@
         <td><%= ad.is_active %></td>
         <td><%= ad.type_price_id %></td>
         <td><%= ad.city.city unless ad.city.blank? %></td>
+        <td><%= ad.user_id %> / <%= ad.user.name %></td>
         <td><%= link_to 'Show', ad %></td>
         <td><%= link_to 'Edit', edit_ad_path(ad) %></td>
         <td><%= link_to 'Destroy', ad, method: :delete, data: { confirm: 'Are you sure?' } %></td>
