--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
     </button>
     <img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle">
-    <a class="navbar-brand" href="#">AgroSocial</a>
+    <a class="navbar-brand" href="/">AgroSocial</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,6 +34,9 @@
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+          <li>DEBUG => User: <%= current_user.name %> - ID: <%= current_user.id%> - EMAIL: <%= current_user.email%></li>
+      <% end %>
       <li><a href="#">Link</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
