--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>User#index</h1>
 <p>Find me in app/views/user/index.html.erb</p>
-<table>
+<table class="table">
 	<tr>
 		<td>Nome</td>
 		<td>Nickname</td>
