[Update] Messages .save

--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -28,3 +28,7 @@
   <strong>Created_at:</strong>
   <%= message.created_at %>
 </p>
+
+<p>
+  <%= button_to "Responder", "javascript:addRow()" %>
+</p>
