--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,12 @@
         <!-- SIDEBAR Open -->
         <div id="sidebar-left" class="col-2 col-lg-2">
             <ul>
-              <li><%= link_to "<i class='fa fa-anchor'></i>ADS".html_safe  ,  ads_path %></li>
-              <li><%= link_to "<i class='icon-plus'></i>New Ad".html_safe  ,  new_ad_path %></li>
-              <li><%= link_to "<i class='icon-user'></i>Users".html_safe  ,  users_path %></li>
+              <li><%= link_to "<i class='fa fa-anchor fa-border'></i> ADS".html_safe  ,  ads_path %></li>
+              <li><%= link_to "<i class='fa  fa-plus fa-border'></i> New Ad".html_safe  ,  new_ad_path %></li>
+              <li><%= link_to '<i class="fa fa-user fa-border"></i> Users'.html_safe  ,  users_path %></li>
               <li>
-                <%= link_to "<i class='icon-user'></i>Login".html_safe  ,  new_user_session_path %>
+
+                <%= link_to "<i class='fa fa-spinner fa-spin fa-border'></i> Login".html_safe  ,  new_user_session_path %>
               </li>
               <li>Teste</li>
             </ul>
