--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,16 @@
+
+<footer>
 <p> footer </p>
+
+<li><a href="#">Sobre</a></li>
+<li><a href="#">Contacto</a></li>
+<li><a href="#">Política de Privacidade</a></li>
+<li><a href="#">Termos e Condições</a></li>
+
+<i class="fa fa-facebook"></i>
+<i class="fa fa-google-plus"></i>
+<i class="fa fa-twitter"></i>
+
+
+
+</footer>
