--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2286,6 +2286,7 @@ fieldset[disabled] .btn-info.active {
 .btn-link {
   font-weight: normal;
   color: #428bca;
+
   cursor: pointer;
   border-radius: 0;
 }
@@ -4878,16 +4879,17 @@ textarea.input-group-sm > .input-group-btn > .btn {
 .badge {
   display: inline-block;
   min-width: 10px;
-  padding: 3px 7px;
-  font-size: 12px;
+  padding: 3px 6px;
+  font-size: 10px;
   font-weight: bold;
   line-height: 1;
-  color: #ffffff;
+  color: #16ab84;
   text-align: center;
   white-space: nowrap;
-  vertical-align: baseline;
-  background-color: #999999;
+  vertical-align: center;
+  background-color: #fff;
   border-radius: 10px;
+  margin-left:-10px;
 }
 
 .badge:empty {
