--- a/app/views/messages/_show.html.erb
+++ b/app/views/messages/_show.html.erb
@@ -30,5 +30,5 @@
 </p>
 
 <p>  
-  <%= button_tag "Responder", :id => "sender_button", :class => "btn btn-small btn-inverse", :type => "button" ,:on_click%>
+  <%= button_tag "Responder", :id => "sender_button", :class => "btn btn-small btn-inverse", :type => "button" ,:on_click => ""%>
 </p>
