--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -8,55 +8,38 @@
 
 /********** HEADER **********/
 /* Cor do header #00ba84 #4db07a #0a9268*/
-.navbar-default{
-	background-color: #16ab84;
 
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+	background-color: #16ab84;
 }
-.navbar-brand{
+.navbar-inverse {
+background-color: #16ab84;
+border-color: #fff;
+}
+
+.navbar-inverse .navbar-brand{
 	text-transform: uppercase;
 	color:#fff;
 }
 
-
-.navbar-default .navbar-brand {
-  text-transform: uppercase;
-  color:#fff;
-}
-
-
-
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
+.navbar-inverse .navbar-brand:hover,
+.navbar-inverse .navbar-brand:focus {
   color: #34495e;
   background-color: transparent;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-inverse .navbar-nav > li > a {
 	color: #fff;
 }
 
-.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+.navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
 color: #16ab84;
 background-color: #fff;
 }
 
 /******SIDEBAR LEFT**********/
-#sidebar-left{
-	  background-color: #eaedf1;
-	  height: 100%;
-	  padding-top: 20px
-	  font-weight: 200;
-	  font-size: 1em;
-	  line-height: 2.5em;
-	  margin-bottom: 0px;
-	  text-shadow: none;
-	  text-transform: none;
-  /*Change the arrow direction if the item is collapsed*/
-}
 
-#container{
-	min-height: 400px;
-}
+
 
 #sidebar-left ul  {
   list-style: none;
@@ -69,3 +52,132 @@ background-color: #fff;
 	float: left;
 }
 
+
+#wrapper {
+  padding-left: 200px;
+  transition: all 0.4s ease 0s;
+  margin-top: 50px;
+
+}
+
+#sidebar-left {
+  background-color: #eaedf1;
+  margin-left: -200px;
+  left: 200px;
+  width: 200px;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  padding: 15px 25px;
+}
+
+
+.sidebar-nav {
+  position: fixed;
+  top: 10;
+  width: 200px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.sidebar-nav li {
+  line-height: 40px;
+  text-indent: 20px;
+}
+
+.sidebar-nav li a {
+  color: #293a49;
+  display: block;
+  text-decoration: none;
+}
+
+.sidebar-nav li a:hover {
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+  text-decoration: none;
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  line-height: 60px;
+  font-size: 18px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+
+.content-header {
+  height: 65px;
+  line-height: 65px;
+}
+
+.content-header h1 {
+  margin: 0;
+  margin-left: 20px;
+  line-height: 65px;
+  display: inline-block;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+.inset {
+  padding: 20px;
+}
+
+@media (max-width:767px) {
+
+.navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+color:  #293a49;
+}
+
+
+#wrapper {
+  padding-left: 0;
+}
+
+#sidebar-left {
+  left: 0;
+}
+
+#wrapper.active {
+  position: relative;
+  left: 250px;
+}
+
+#wrapper.active #sidebar-left {
+  left: 200px;
+  width: 200px;
+  transition: all 0.4s ease 0s;
+}
+
+#menu-toggle {
+  display: inline-block;
+  margin-top: 10px;
+}
+
+.inset {
+  padding: 15px;
+}
+
+}
