--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -47,19 +47,17 @@
   <%= @ad.city.city %>
 </p>
 
+<p>
+  <strong>User:</strong>
+  <%= @ad.user.name %>
+</p>
+
 <legend> Messages </legend>
 <div id="messages">
   <%= render "messages" %>
 </div>
 
-<<<<<<< HEAD
-
-    <% if current_user.id == @ad.user_id %>
-      <%= render "messages/form" %>
-    <% end %>
-=======
 <%= render "messages/form" %>
->>>>>>> 22e702b55871c93a8b3fe3005fe982761ef0c74b
  
 
  <% @ad.ad_images.each do |i| %>
