--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,6 +28,7 @@
           </div>
           </div>
        -->
+
           <form class="navbar-form navbar-left" role="search">
             <div class="form-group">
               <input type="text" id="omni-search" class="form-control" placeholder="Pesquisar">
@@ -38,7 +39,7 @@
             <!--NOTIFICACOES-->
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown messages-dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-envelope"></i> Notificações <span class="badge">3</span> <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell-o"></i><span class="badge" id="custom-badge">3</span> <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li class="dropdown-header">3 New </li>
                 <li class="preview">
@@ -68,21 +69,58 @@
                   </a>
                 </li>
                 <li class="divider"></li>
-                <li><a href="#">View More <span class="badge">3</span></a></li>
+                <li><a href="#">Ver Mais <span class="badge">3</span></a></li>
               </ul>
-            </li><!--END NOTIFICACOES-->
+            </li>
+            <!--END NOTIFICACOES-->
+
+
+            <!-- MESSAGES -->
+
+              <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown messages-dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope-o"></i><span class="badge" id="custom-badge">2</span> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li class="dropdown-header">2 New </li>
+                <li class="preview">
+                  <a href="#">
+                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                    <span class="name">John Smith:</span>
+                    <span class="message">Hey there, I wanted to ask you something...</span>
+                    <span class="time"><i class="icon-time"></i> 4:34 PM</span>
+                  </a>
+                </li>
+                <li class="divider"></li>
+                <li class="preview">
+                  <a href="#">
+                    <span class="avatar"><img src="http://placehold.it/50x50"></span>
+                    <span class="name">John Smith:</span>
+                    <span class="message">Hey there, I wanted to ask you something...</span>
+                    <span class="time"><i class="icon-time"></i> 4:34 PM</span>
+                  </a>
+                </li>
+                <li class="divider"></li>
+                <li><a href="#">Ver Mais <span class="badge">2</span></a></li>
+              </ul>
+            </li>
+
+
+             <!--END MESSAGES-->
+
 
              <!--USER-->
-              <li><a href="#"><i class="fa fa-bell-o"></i><span class="badge">3</span></a></li>
-              <li><a href="#"><i class="fa fa-envelope-o"></i><span class="badge">21</span></a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i>  <% if user_signed_in?%> <%= current_user.name %> <%end%><b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> 
+                  <% if user_signed_in? %>
+                    <%= current_user.name %>
+                  <% end %>
+                  <b class="caret"></b></a>
                <ul class="dropdown-menu">
-                <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-                <li><a href="#"><i class="fa fan-envelope"></i> Inbox <span class="badge">7</span></a></li>
-                <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                <li><a href="#"><i class="fa fa-user"></i> Perfil</a></li>
+                <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
+                <li><a href="#"><i class="fa fa-gear"></i>Definições</a></li>
                 <li class="divider"></li>
-                <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+                <li><a href="#"><i class="fa fa-power-off"></i>Terminar Sessão</a></li>
               </ul>
               </li>
               <!--END USER-->
@@ -92,4 +130,3 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
-
