[Update]Header border-shadow

--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -14,7 +14,8 @@
 }
 .navbar-inverse {
 background-color: #16ab84;
-border-color: #fff;
+border-color: #16ab84;
+box-shadow: 0px 3px 5px #888888;
 }
 
 .navbar-inverse .navbar-brand{
