--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
       <!-- Sidebar -->
       <div id="sidebar-left">
         <ul class="sidebar-nav">
+           <% if user_signed_in? %>
+                  <%= image_tag current_user.avatar.url:thumb %>
+            <% end %>
            <li><%= link_to "<i class='fa fa-anchor '></i> ADS".html_safe  ,  ads_path %></li>
               <li><%= link_to "<i class='fa  fa-plus '></i> New Ad".html_safe  ,  new_ad_path %></li>
               <li><%= link_to '<i class="fa fa-user "></i> Users'.html_safe  ,  users_path %></li>
