--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -98,11 +98,40 @@ footer {
   overflow-y: auto;
   z-index: 1000;
   transition: all 0.4s ease 0s;
+  /*box-shadow: 0px 3px 5px #888888;*/
+
 }
 
 #sidebar-left ul  {
   list-style: none;
 }
+
+ul{
+  list-style: none;
+}
+
+.thumbnail span {
+display: block;
+background: #F3984D;
+position: absolute;
+min-width: 20px;
+padding: 8px;
+color: white;
+font-size: 15px;
+opacity: 21;
+/*
+margin-left: 10px;
+margin-top: 10px;
+*/
+-webkit-border-bottom-right-radius: 4px;
+-moz-border-radius-bottomright: 4px;
+border-bottom-right-radius: 4px;
+}
+
+.price {
+  background: #F3984D;
+}
+
 
 #page-content-wrapper {
   width: 100%;
