--- a/app/assets/stylesheets/theme.css
+++ b/app/assets/stylesheets/theme.css
@@ -106,31 +106,7 @@ footer {
   list-style: none;
 }
 
-ul{
-  list-style: none;
-}
 
-.thumbnail span {
-display: block;
-background: #F3984D;
-position: absolute;
-min-width: 20px;
-padding: 8px;
-color: white;
-font-size: 15px;
-opacity: 21;
-/*
-margin-left: 10px;
-margin-top: 10px;
-*/
--webkit-border-bottom-right-radius: 4px;
--moz-border-radius-bottomright: 4px;
-border-bottom-right-radius: 4px;
-}
-
-.price {
-  background: #F3984D;
-}
 
 
 #page-content-wrapper {
@@ -161,8 +137,8 @@ border-bottom-right-radius: 4px;
 }
 
 .sidebar-nav li a:hover {
-  color: #fff;
-  background: rgba(255,255,255,0.2);
+  color: #293a49;
+  background: rgba(255,255,255,1);
   text-decoration: none;
 }
 
@@ -240,3 +216,62 @@ color:  #293a49;
 .inset {
   padding: 15px;
 }
+}
+
+/******THUMBNAILS**********/
+ul{
+  list-style: none;
+}
+
+.thumbnail span {
+display: block;
+background: #F3984D;
+position: absolute;
+min-width: 20px;
+padding: 8px;
+color: white;
+font-size: 15px;
+opacity: 21;
+/*
+margin-left: 10px;
+margin-top: 10px;
+*/
+-webkit-border-bottom-right-radius: 4px;
+-moz-border-radius-bottomright: 4px;
+border-bottom-right-radius: 4px;
+}
+
+.price {
+  background: #F3984D;
+}
+
+
+
+/* pagina de login*/
+
+ul{
+  list-style: none;
+}
+
+.thumbnail span {
+display: block;
+background: #F3984D;
+position: absolute;
+min-width: 20px;
+padding: 8px;
+color: white;
+font-size: 15px;
+opacity: 21;
+/*
+margin-left: 10px;
+margin-top: 10px;
+*/
+-webkit-border-bottom-right-radius: 4px;
+-moz-border-radius-bottomright: 4px;
+border-bottom-right-radius: 4px;
+}
+
+.price {
+  background: #F3984D;
+}
+
