--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -10,29 +10,39 @@
       </ul>
     </div>
   <% end %>
+  
+
+  <div class="field">
+    <h4> Quero inserir um anúncio na categoria de  <%= f.collection_select(:category_id,@categories,:id,:name, :include_blank => 'Escolha uma opção') unless @categories.blank? %></h4>
+     
+  </div>
+
+
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title,:placeholder => "Title" %>
   </div>
+
+  
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_field :description %>
+    <%= f.text_field :description,:placeholder => :description %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
-    <%= f.text_field :price %>
+    <%= f.text_field :price,:placeholder => :price %>
   </div>
   <div class="field">
     <%= f.label :expire_date %><br>
-    <%= f.datetime_select :expire_date %>
+    <%= f.datetime_select :expire_date,:placeholder => :expire_date %>
   </div>
   <div class="field">
     <%= f.label :location %><br>
-    <%= f.text_field :location %>
+    <%= f.text_field :location,:placeholder =>:location %>
   </div>
   <div class="field">
     <%= f.label :type_price_id %><br>
-    <%= f.number_field :type_price_id %>
+    <%= f.number_field :type_price_id,:placeholder =>:type_price_id %>
   </div>
   <div class="field">
     <%= f.label :city_id %><br>
