--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -5,6 +5,16 @@
 
 <p id="notice"><%= notice %></p>
 
+
+<p>
+  <strong>Category:</strong>
+  <% if @ad.category %>
+    <span class="label" style="background-color: #<%= @ad.category.color %>">
+      <%= @ad.category.name %>
+    </span>
+  <% end %>
+
+
 <p>
   <strong>Title:</strong>
   <%= @ad.title %>
