--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -15,10 +15,18 @@
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :color %><br />
+    <%= f.text_field :color,:class =>"pick-a-color" %>
+    
+  </div>
+  
   <div class="field">
     <%= f.label :description %><br>
     <%= f.text_field :description %>
   </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
