--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,8 +19,10 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :birthday, "Birthday"%><br />
-  <%= f.date_select :birthday, :order => [:day, :month, :year],:start_year => Time.now.year - 200 %>
+  <div class="field">
+    <%= f.label :birthday %><br />
+    <%= f.text_field :birthday, :label => "Date",  :class => 'datepicker' ,:value => (f.object.birthday.strftime('%Y-%m-%d'))%>
+  </div>
 
   <div><%= f.label :phone, "Phone"%><br />
   <%= f.text_field :phone %></div>
