--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -4961,6 +4961,7 @@ a.list-group-item.active > .badge,
   height: auto;
   max-width: 100%;
   padding: 4px;
+  margin-bottom: 30px;
   line-height: 1.428571429;
   background-color: #ffffff;
   border: 1px solid #dddddd;
@@ -4973,7 +4974,7 @@ a.list-group-item.active > .badge,
   display: block;
   height: auto;
   max-width: 100%;
-}
+  }
 
 a.thumbnail:hover,
 a.thumbnail:focus {
