--- a/app/views/layouts/_sidebar_left.html.erb
+++ b/app/views/layouts/_sidebar_left.html.erb
@@ -1,21 +1,22 @@
-<!-- Sidebar -->
-              <ul>
+  <!-- Sidebar -->
+      <div id="sidebar-left">
+        <ul class="sidebar-nav">
+           <% if user_signed_in? %>
+                  <%= image_tag current_user.avatar.url:thumb %>
+            <% end %>
+           <li><%= link_to "<i class='fa fa-anchor '></i> ADS".html_safe , ads_path %></li>
+              <li><%= link_to "<i class='fa fa-plus '></i> New Ad".html_safe , new_ad_path %></li>
+              <li><%= link_to '<i class="fa fa-user "></i> Users'.html_safe , users_path %></li>
+              <li>
                  <% if user_signed_in? %>
-                        <%= image_tag current_user.avatar.url:thumb %>
+                    <%= "Tas Bom " + current_user.name + " ?" %>
+                  <% else %>
+
+                    <%= link_to "<i class='fa fa-spinner '></i> Login".html_safe , new_user_session_path %>
                   <% end %>
-                 <li><%= link_to "<i class='fa fa-anchor '></i> ADS".html_safe  ,  ads_path %></li>
-                    <li><%= link_to "<i class='fa  fa-plus '></i> New Ad".html_safe  ,  new_ad_path %></li>
-                    <li><%= link_to '<i class="fa fa-user "></i> Users'.html_safe  ,  users_path %></li>
-                    <li>
-                       <% if user_signed_in? %>
-                          <%= "Tas Bom " + current_user.name + " ?" %>
-                        <% else %>
 
-                          <%= link_to "<i class='fa fa-spinner '></i> Login".html_safe  ,  new_user_session_path %>
-                        <% end %>
-
-                      
-                    </li>
-                    <li>Teste</li>
-              </ul>
-         <!-- left content box -->
+                
+              </li>
+              <li>Teste</li>
+        </ul>
+      </div>
